plugins {
    id "java"
    id "dev.architectury.loom" version "1.7-SNAPSHOT" apply false
    id "architectury-plugin" version "3.4-SNAPSHOT"

    id "com.gradleup.shadow" version "9.0.0-beta12" apply false
    id "io.github.pacifistmc.forgix" version "1.2.7"

    id "me.modmuss50.mod-publish-plugin" version "0.5.0"
}

var jarName = "BadOptimizations-${rootProject.mod_version}-1.20.5-20.6.jar"

architectury {
    minecraft = rootProject.minecraft_version
}

subprojects {
    apply plugin: "java"
    apply plugin: "dev.architectury.loom"
    apply plugin: "architectury-plugin"

    base {
        archivesName = "BadOptimizations-$project.name"
    }

    repositories {
        maven { url = "https://maven.terraformersmc.com/" }
    }

    dependencies {
        minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
        mappings loom.layered {
            it.mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"

            // somebody at neoforge or arch goofed so we need this
            it.mappings(rootProject.rootDir.toPath().resolve("1.20.5.tiny").toFile())
        }
        implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:0.3.2"))
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    version = rootProject.mod_version
    group = rootProject.maven_group

    rootProject.tasks.build.dependsOn project.tasks.build
}

forgix {
    group "me.thosea"
    outputDir "build/libs/merged"
    mergedJarName jarName
    tasks.build.finalizedBy mergeJars
}

publishMods {
    file = file("build/libs/merged/${jarName}")
    displayName = "$rootProject.mod_version (1.20.5/1.20.6)"

    version = rootProject.mod_version
    type = STABLE
    modLoaders.add("fabric")
    modLoaders.add("neoforge")

    modrinth {
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        projectId = "g96Z4WVZ"
        minecraftVersions.add("1.20.5")
        minecraftVersions.add("1.20.6")
    }

    curseforge {
        accessToken = providers.environmentVariable("CURSEFORGE_API_KEY")
        projectId = "949555"
        minecraftVersions.add("1.20.5")
        minecraftVersions.add("1.20.6")
        clientRequired = true
    }

    file("changelog.md").withInputStream {
        var str = new String(it.readAllBytes())
        while(str.endsWith("\n")) str = str.substring(0, str.length() - 1)
        publishMods.changelog = str
    }

    tasks.publishMods.dependsOn tasks.mergeJars
}